syntax = "proto3";

import "MessageID.proto";
import "LobbyMessage.proto";

package ServerPKG;

//服务器信息
message ServerState
{
    string          ServerID            = 1;    //服务器ID
    string          ServerIP            = 2;    //服务器IP地址
    int32           Port                = 3;    //端口号
    ServerType      ServerType          = 4;    //服务器类型
    int32           UserCount           = 5;    //当前在线人数
    int32           MaxUser             = 6;    //支持最大在线人数
}

message GameRoomInfo
{
    uint32         GameID              = 1;     //房间ID
    string         GameName            = 2;     //房间名称
    uint64         MinScore            = 3;     //进入最小分数
    uint64         MaxScore            = 4;     //进入最大分数
    float          Percentage          = 5;     //房间抽水比例
    string         ServerID            = 6;     //所在服务器的ID
}

message NotifyUserJoinGame
{
    uint64                   UserID              = 1;     //用户ID
    ClientPKG.AccountInfo    PlayerInfo          = 2;     //用户信息
    string                   LobbyServerID       = 3;     //所在大厅服务器ID
    string                   GateServerID        = 4;     //所在GateServerID
    string                   GameServerID        = 5;     //所在游戏服务器的ID
    uint64                   GameID              = 6;     //要加入的游戏ID
}